// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > MultipleErrors 1`] = `
<div>
  <ul
    aria-label="Validation errors of field undefined"
    data-testid="undefined_error"
  >
    <li
      style="overflow: hidden;"
    >
      <span
        class="p-1"
      >
        first error
      </span>
    </li>
    <li
      style="overflow: hidden;"
    >
      <span
        class="p-1"
      >
        second error
      </span>
    </li>
  </ul>
</div>
`;

exports[`Story Snapshots > SingleError 1`] = `
<div>
  <ul
    aria-label="Validation errors of field undefined"
    data-testid="undefined_error"
  >
    <li
      style="overflow: hidden;"
    >
      <span
        class="p-1"
      >
        single error message
      </span>
    </li>
  </ul>
</div>
`;
